Fix rotation Firefox

--- a/wp-content/themes/ledgeredge/assets/css/editor-style.css
+++ b/wp-content/themes/ledgeredge/assets/css/editor-style.css
@@ -2411,7 +2411,6 @@ body.nav-open {
   height: calc(60vw - var(--spacing) - 0px);
   margin: 0 auto;
   margin-bottom: var(--spacing);
-  -moz-transform: rotate(15deg);
 }
 @media (min-width: 50em) {
   .team-item--image {
@@ -2452,6 +2451,9 @@ body.nav-open {
 }
 .team-item:nth-child(3n+2) {
   background-color: var(--color-quaternary);
+}
+.team-item:nth-child(3n+2) .team-item--image {
+  -moz-transform: rotate(15deg);
 }
 .team-item:nth-child(3n+2) .team-item--image__clip {
   transform: rotate(-10deg);
